include/Win64/Physics.ODEImport.hpp

struct TdMass;
struct TdxBody;
class DELPHICLASS TBodyList;
struct TdSurfaceParameters;
struct TdContactGeom;
struct TdContact;
struct TdxTriMeshData;
struct TdxGeom;
class DELPHICLASS TGeomList;
struct TdxSpace;
typedef float TdReal;
typedef float *PdReal;
typedef System::StaticArray<float, 16> TdRealArray;
typedef TdRealArray *PdRealArray;
typedef System::StaticArray<float, 4> TdVector3;
typedef TdVector3 *PdVector3;
typedef System::StaticArray<float, 4> TdVector4;
typedef System::StaticArray<float, 12> TdMatrix3;
typedef TdVector4 TdQuaternion;
typedef System::StaticArray<float, 6> TdAABB;
struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};
typedef TdxGeom *PdxGeom;
typedef TdxBody *PdxBody;
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdSurfaceParameters
{
public:
	int mode;
	float mu;
	float mu2;
	float bounce;
	float bounce_vel;
	float soft_erp;
	float soft_cfm;
	float motion1;
	float motion2;
	float motionN;
	float slip1;
	float slip2;
};
struct DECLSPEC_DRECORD TdContactGeom
{
public:
	TdVector3 pos;
	TdVector3 normal;
	float depth;
	TdxGeom *g1;
	TdxGeom *g2;
	int side1;
	int side2;
};
struct DECLSPEC_DRECORD TdContact
{
public:
	TdSurfaceParameters surface;
	TdContactGeom geom;
	TdVector3 fdir1;
};
typedef void __cdecl (*TdNearCallback)(void * data, PdxGeom o1, PdxGeom o2);
typedef TdxSpace *PdxSpace;
typedef System::StaticArray<int, 65536> TdIntegerArray;
typedef TdIntegerArray *PdIntegerArray;
typedef System::StaticArray<System::StaticArray<float, 4>, 65536> TdVector3Array;
typedef TdVector3Array *PdVector3Array;
struct DECLSPEC_DRECORD TdxTriMeshData
{
public:
	System::Byte unknown;
};
typedef TdxTriMeshData *PdxTriMeshData;
struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};
struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};
//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode64s.dll"
extern "C" void __cdecl dBodyDestroy(const PdxBody body);
extern "C" void __cdecl dGeomTriMeshSetData(PdxGeom g, PdxTriMeshData data);
extern "C" PdxTriMeshData __cdecl dGeomTriMeshGetData(PdxGeom g);
extern "C" PdxTriMeshData __cdecl dGeomTriMeshGetTriMeshDataID(PdxGeom g);
extern "C" void __cdecl dGeomTriMeshDataUpdate(PdxTriMeshData g);
extern "C" int __cdecl dGeomTriMeshIsTCEnabled(PdxGeom g, int geomClass);
extern "C" void __cdecl dGeomTriMeshEnableTC(PdxGeom g, int geomClass, int enable);
extern "C" void __cdecl dGeomTriMeshClearTCCache(PdxGeom g);
extern "C" int __cdecl dGeomTriMeshGetTriangleCount(PdxGeom g);
extern "C" void __cdecl dGeomTriMeshGetTriangle(PdxGeom g, int index, PdVector3 v0, PdVector3 v1, PdVector3 v2);
extern "C" void __cdecl dGeomTriMeshGetPoint(PdxGeom g, int index, float u, float v, const TdVector3 &result);
extern "C" void * __cdecl dGeomTriMeshGetArrayCallback(PdxGeom g);
extern "C" void * __cdecl dGeomTriMeshGetRayCallback(PdxGeom g);
extern "C" void __cdecl dGeomTriMeshSetArrayCallback(PdxGeom g, void * ArrayCallback);
extern "C" void __cdecl dGeomTriMeshSetRayCallback(PdxGeom g, void * RayCallback);
extern "C" void __cdecl dGeomTriMeshSetCallback(PdxGeom g, void * callback);
extern "C" void * __cdecl dGeomTriMeshGetCallback(PdxGeom g);
extern "C" void __cdecl dGeomTriMeshDataDestroy(PdxTriMeshData g);
extern "C" PdxTriMeshData __cdecl dGeomTriMeshDataCreate(void);
extern "C" void __cdecl dGeomTriMeshDataSet(PdxTriMeshData g, int data_id, void * data);
extern "C" void __cdecl dGeomTriMeshDataBuildSimple(PdxTriMeshData g, PdVector3Array Vertices, int VertexCount, PdIntegerArray Indices, int IndexCount);
extern "C" void __cdecl dGeomTriMeshDataBuildSimple1(PdxTriMeshData g, PdVector3Array Vertices, int VertexCount, PdIntegerArray Indices, int IndexCount, PdVector3Array Normals);
extern "C" void __cdecl dGeomTriMeshDataBuildDouble(PdxTriMeshData g, PdVector3Array Vertices, int VertexStride, int VertexCount, PdIntegerArray Indices, int IndexCount, int TriStride);
extern "C" void __cdecl dGeomTriMeshDataBuildDouble1(PdxTriMeshData g, PdVector3Array Vertices, int VertexStride, int VertexCount, PdIntegerArray Indices, int IndexCount, int TriStride, PdVector3Array Normals);
extern "C" void __cdecl dGeomTriMeshDataBuildSingle(PdxTriMeshData g, PdVector3Array Vertices, int VertexStride, int VertexCount, PdIntegerArray Indices, int IndexCount, int TriStride);
extern "C" void __cdecl dGeomTriMeshDataBuildSingle1(PdxTriMeshData g, PdVector3Array Vertices, int VertexStride, int VertexCount, PdIntegerArray Indices, int IndexCount, int TriStride, PdVector3Array Normals);
extern "C" void __cdecl dInfiniteAABB(PdxGeom geom, TdAABB &aabb);
extern "C" void __cdecl dSpaceDestroy(const PdxSpace Space);
extern "C" PdxSpace __cdecl dSimpleSpaceCreate(PdxSpace Space);
extern "C" PdxSpace __cdecl dHashSpaceCreate(PdxSpace Space);
extern "C" PdxSpace __cdecl dQuadTreeSpaceCreate(const PdxSpace Space, const TdVector3 &Center, const TdVector3 &Extents, const int depth);
extern "C" void __cdecl dSpaceAdd(const PdxSpace Space, const PdxGeom geom);
extern "C" void __cdecl dSpaceRemove(const PdxSpace Space, const PdxGeom geom);
extern "C" void __cdecl dSpaceClean(const PdxSpace Space);
extern "C" int __cdecl dSpaceQuery(const PdxSpace Space, const PdxGeom geom);
extern "C" int __cdecl dSpaceGetNumGeoms(const PdxSpace Space);
extern "C" PdxGeom __cdecl dSpaceGetGeom(const PdxSpace Space, const int I);
extern "C" void __cdecl dHashSpaceSetLevels(const PdxSpace Space, const int minlevel, const int maxlevel);
extern "C" void __cdecl dHashSpaceGetLevels(const PdxSpace Space, int &minlevel, int &maxlevel);
extern "C" void __cdecl dSpaceSetCleanup(PdxSpace Space, const int mode);
extern "C" int __cdecl dSpaceGetCleanup(PdxSpace Space);
extern "C" int __cdecl dCollide(PdxGeom o1, PdxGeom o2, int flags, TdContactGeom &contact, int skip);
extern "C" void __cdecl dSpaceCollide(const PdxSpace Space, void * data, TdNearCallback callback);
extern "C" void __cdecl dSpaceCollide2(PdxGeom o1, PdxGeom o2, void * data, TdNearCallback callback);
extern "C" void __cdecl dMassSetParameters(TdMass &m, float themass, float cgx, float cgy, float cgz, float I11, float I22, float I33, float I12, float I13, float I23);
extern "C" void __cdecl dMassAdd(TdMass &a, TdMass &b);
extern "C" void __cdecl dMassAdjust(TdMass &m, float newmass);
extern "C" void __cdecl dMassTranslate(TdMass &m, float x, float y, float z);
extern "C" void __cdecl dMassRotate(TdMass &m, TdMatrix3 &R);
extern "C" void __cdecl dMassSetZero(TdMass &m);
extern "C" void __cdecl dMassSetBox(TdMass &m, float density, float lx, float ly, float lz);
extern "C" void __cdecl dMassSetBoxTotal(TdMass &m, float total_mass, float lx, float ly, float lz);
extern "C" void __cdecl dMassSetCylinder(TdMass &m, float density, int direction, float radius, float length);
extern "C" void __cdecl dMassSetCylinderTotal(TdMass &m, float total_mass, int direction, float radius, float length);
extern "C" void __cdecl dMassSetCapsule(TdMass &m, float density, int direction, float radius, float length);
extern "C" void __cdecl dMassSetCapsuleTotal(TdMass &m, float total_mass, int direction, float radius, float length);
extern "C" void __cdecl dMassSetSphere(TdMass &m, float density, float radius);
extern "C" void __cdecl dMassSetSphereTotal(TdMass &m, float total_mass, float radius);
extern "C" void __cdecl dMassSetTrimesh(TdMass &m, float density, PdxGeom TriMesh);
extern "C" void __cdecl dMassSetTrimeshTotal(TdMass &m, float total_mass, PdxGeom TriMesh);
extern "C" void __cdecl dQFromAxisAndAngle(TdVector4 &q, const float ax, const float ay, const float az, const float angle);
extern "C" void __cdecl dRFromAxisAndAngle(TdMatrix3 &R, const float ax, const float ay, const float az, const float angle);
extern "C" void __cdecl dRSetIdentity(TdMatrix3 &R);
extern "C" void __cdecl dQSetIdentity(TdVector4 &q);
extern "C" void __cdecl dRFromEulerAngles(TdMatrix3 &R, const float phi, const float theta, const float psi);
extern "C" void __cdecl dRFrom2Axes(TdMatrix3 &R, const float ax, const float ay, const float az, const float bx, const float by, const float bz);
extern "C" void __cdecl dRFromZAxis(TdMatrix3 &R, const float ax, const float ay, const float az);
extern "C" void __cdecl dMultiply0(const PdReal a, const PdReal b, const PdReal c, int p, int q, int R);
extern "C" void __cdecl dMultiply1(const PdReal a, const PdReal b, const PdReal c, int p, int q, int R);
extern "C" void __cdecl dMultiply2(const PdReal a, const PdReal b, const PdReal c, int p, int q, int R);
extern "C" void __cdecl dQMultiply0(TdVector4 &qa, const TdVector4 &qb, const TdVector4 &qc);
extern "C" void __cdecl dQMultiply1(TdVector4 &qa, const TdVector4 &qb, const TdVector4 &qc);
extern "C" void __cdecl dQMultiply2(TdVector4 &qa, const TdVector4 &qb, const TdVector4 &qc);
extern "C" void __cdecl dQMultiply3(TdVector4 &qa, const TdVector4 &qb, const TdVector4 &qc);
extern "C" void __cdecl dRfromQ(TdMatrix3 &R, const TdVector4 &q);
extern "C" void __cdecl dQfromR(TdVector4 &q, const TdMatrix3 &R);
extern "C" void __cdecl dDQfromW(TdVector4 &dq, const TdVector3 &w, const TdVector4 &q);
extern "C" void __cdecl dNormalize3(TdVector3 &a);
extern "C" void __cdecl dNormalize4(TdVector4 &a);
extern "C" void __cdecl dClosestLineSegmentPoints(const TdVector3 &a1, const TdVector3 &a2, const TdVector3 &b1, const TdVector3 &b2, TdVector3 &cp1, TdVector3 &cp2);
extern "C" int __cdecl dBoxTouchesBox(const TdVector3 &_p1, const TdMatrix3 &R1, const TdVector3 &side1, const TdVector3 &_p2, const TdMatrix3 &R2, const TdVector3 &side2);
extern "C" float __cdecl dMaxDifference(PdReal a, PdReal b, int n, int m);
extern "C" void __cdecl dMakeRandomVector(TdVector3 &n1, int a, float f);
extern "C" int __cdecl dAreConnected(PdxBody a, PdxBody b);
extern "C" int __cdecl dAreConnectedExcluding(PdxBody a, PdxBody b, TdJointTypeNumbers joint_type);
extern "C" void __cdecl dMakeRandomMatrix(PdRealArray a, int n, int m, float range);
extern "C" void __cdecl dClearUpperTriangle(PdRealArray a, int n);
extern "C" unsigned __cdecl dRandGetSeed(void);
extern "C" void __cdecl dRandSetSeed(const unsigned s);
extern "C" int __cdecl dRandInt(const int n);
extern "C" float __cdecl dRandReal(void);
extern "C" int __cdecl dTestRand(void);
extern "C" void __cdecl dTestMatrixComparison(void);
extern "C" void __cdecl dTestSolveLCP(void);
extern DELPHI_PACKAGE int dSphereClass;
extern DELPHI_PACKAGE int dBoxClass;
extern DELPHI_PACKAGE int dCapsuleClass;
extern DELPHI_PACKAGE int dCylinderClass;
extern DELPHI_PACKAGE int dPlaneClass;
extern DELPHI_PACKAGE int dRayClass;
extern DELPHI_PACKAGE int dConvexClass;
extern DELPHI_PACKAGE int dGeomTransformClass;
extern DELPHI_PACKAGE int dTriMeshClass;
extern DELPHI_PACKAGE int dHeightFieldClass;
extern DELPHI_PACKAGE int dFirstSpaceClass;
extern DELPHI_PACKAGE int dSimpleSpaceClass;
extern DELPHI_PACKAGE int dHashSpaceClass;
extern DELPHI_PACKAGE int dSweepAndPruneSpaceClass;
extern DELPHI_PACKAGE int dQuadTreeSpaceClass;
extern DELPHI_PACKAGE int dLastSpaceClass;
extern DELPHI_PACKAGE int dFirstUserClass;
extern DELPHI_PACKAGE int dLastUserClass;
extern DELPHI_PACKAGE int dGeomNumClasses;
extern DELPHI_PACKAGE bool IsODEInitialized;
extern DELPHI_PACKAGE bool DisabledDebugGeom;
extern DELPHI_PACKAGE bool DisabledDebugCollision;
extern DELPHI_PACKAGE float __fastcall dDot(const PdVector3 a, const PdVector3 b)/* overload */;
extern DELPHI_PACKAGE float __fastcall dDot(const TdVector3 &a, const TdVector3 &b)/* overload */;
extern DELPHI_PACKAGE float __fastcall dDOT14(const TdRealArray &a, const TdRealArray &b)/* overload */;
extern DELPHI_PACKAGE float __fastcall dDOT14(const PdRealArray a, const PdRealArray b)/* overload */;
extern DELPHI_PACKAGE void __fastcall dMULTIPLY0_331(TdVector3 &a, const TdMatrix3 &b, const TdVector3 &c);
extern DELPHI_PACKAGE void __fastcall dMULTIPLY0_333(TdMatrix3 &a, const TdMatrix3 &b, const TdMatrix3 &c);
extern DELPHI_PACKAGE TdVector3 __fastcall Vector3ScalarMul(const TdVector3 &a, const float Scalar);
extern DELPHI_PACKAGE TdVector3 __fastcall Vector3ADD(const TdVector3 &a, const TdVector3 &b);
extern DELPHI_PACKAGE TdVector3 __fastcall Vector3SUB(const TdVector3 &a, const TdVector3 &b);
extern DELPHI_PACKAGE float __fastcall Vector3Length(const TdVector3 &a);
extern DELPHI_PACKAGE TdVector3 __fastcall Vector3Cross(const TdVector3 &v1, const TdVector3 &v2);
extern DELPHI_PACKAGE TdVector3 __fastcall Vector3Make(const float x, const float y, const float z);
extern DELPHI_PACKAGE void __fastcall VerifyDelphiODE(PdxBody body, PdxGeom geom);
extern DELPHI_PACKAGE bool __fastcall InitODE(System::WideChar * ADllName);
extern DELPHI_PACKAGE void __fastcall CloseODE(void);