Source/Physics.ODEImport.pas


procedure dGeomTriMeshSetData(g: PdxGeom; data: PdxTriMeshData); cdecl;
  external ODEDLL;
function dGeomTriMeshGetData(g: PdxGeom): PdxTriMeshData; cdecl;
  external ODEDLL;
function dGeomTriMeshGetTriMeshDataID(g: PdxGeom): PdxTriMeshData; cdecl;
  external ODEDLL;
procedure dGeomTriMeshDataUpdate(g: PdxTriMeshData); cdecl; external ODEDLL;

function dGeomTriMeshIsTCEnabled(g: PdxGeom; geomClass: Integer): Integer;
  cdecl; external ODEDLL;
procedure dGeomTriMeshEnableTC(g: PdxGeom; geomClass, enable: Integer); cdecl;
  external ODEDLL;
procedure dGeomTriMeshClearTCCache(g: PdxGeom); cdecl; external ODEDLL;

function dGeomTriMeshGetTriangleCount(g: PdxGeom): Integer; cdecl;
  external ODEDLL;
procedure dGeomTriMeshGetTriangle(g: PdxGeom; index: Integer;
  v0, v1, v2: PdVector3); cdecl; external ODEDLL;
procedure dGeomTriMeshGetPoint(g: PdxGeom; index: Integer; u, v: TdReal;
  result: TdVector3); cdecl; external ODEDLL;
function dGeomTriMeshGetArrayCallback(g: PdxGeom): pointer; cdecl;
  external ODEDLL;
function dGeomTriMeshGetRayCallback(g: PdxGeom): pointer; cdecl;
  external ODEDLL;
procedure dGeomTriMeshSetArrayCallback(g: PdxGeom; ArrayCallback: pointer);
  cdecl; external ODEDLL;
procedure dGeomTriMeshSetRayCallback(g: PdxGeom; RayCallback: pointer); cdecl;
  external ODEDLL;
procedure dGeomTriMeshSetCallback(g: PdxGeom; callback: pointer); cdecl;
  external ODEDLL;
function dGeomTriMeshGetCallback(g: PdxGeom): pointer; cdecl; external ODEDLL;

procedure dGeomTriMeshDataDestroy(g: PdxTriMeshData); cdecl; external ODEDLL;
function dGeomTriMeshDataCreate: PdxTriMeshData; cdecl; external ODEDLL;
procedure dGeomTriMeshDataSet(g: PdxTriMeshData; data_id: Integer;
  data: pointer); cdecl; external ODEDLL;

procedure dGeomTriMeshDataBuildSimple(g: PdxTriMeshData;
  Vertices: PdVector3Array; VertexCount: Integer; Indices: PdIntegerArray;
  IndexCount: Integer); cdecl; external ODEDLL;
procedure dGeomTriMeshDataBuildSimple1(g: PdxTriMeshData;
  Vertices: PdVector3Array; VertexCount: Integer; Indices: PdIntegerArray;
  IndexCount: Integer; Normals: PdVector3Array); cdecl; external ODEDLL;
procedure dGeomTriMeshDataBuildDouble(g: PdxTriMeshData;
  Vertices: PdVector3Array; VertexStride, VertexCount: Integer;
  Indices: PdIntegerArray; IndexCount, TriStride: Integer); cdecl;
  external ODEDLL;
procedure dGeomTriMeshDataBuildDouble1(g: PdxTriMeshData;
  Vertices: PdVector3Array; VertexStride, VertexCount: Integer;
  Indices: PdIntegerArray; IndexCount, TriStride: Integer;
  Normals: PdVector3Array); cdecl; external ODEDLL;
procedure dGeomTriMeshDataBuildSingle(g: PdxTriMeshData;
  Vertices: PdVector3Array; VertexStride, VertexCount: Integer;
  Indices: PdIntegerArray; IndexCount, TriStride: Integer); cdecl;
  external ODEDLL;
procedure dGeomTriMeshDataBuildSingle1(g: PdxTriMeshData;
  Vertices: PdVector3Array; VertexStride, VertexCount: Integer;
  Indices: PdIntegerArray; IndexCount, TriStride: Integer;
  Normals: PdVector3Array); cdecl; external ODEDLL;

procedure dInfiniteAABB(geom: PdxGeom; var aabb: TdAABB); cdecl;
  external ODEDLL;

// ----- dSpace -----
procedure dSpaceDestroy(const Space: PdxSpace); cdecl; external ODEDLL;

function dSimpleSpaceCreate(Space: PdxSpace): PdxSpace; cdecl; external ODEDLL;
function dHashSpaceCreate(Space: PdxSpace): PdxSpace; cdecl; external ODEDLL;
function dQuadTreeSpaceCreate(const Space: PdxSpace;
  const Center, Extents: TdVector3; const depth: Integer): PdxSpace; cdecl;
  external ODEDLL;

procedure dSpaceAdd(const Space: PdxSpace; const geom: PdxGeom); cdecl;
  external ODEDLL;
procedure dSpaceRemove(const Space: PdxSpace; const geom: PdxGeom); cdecl;
  external ODEDLL;
procedure dSpaceClean(const Space: PdxSpace); cdecl; external ODEDLL;
function dSpaceQuery(const Space: PdxSpace; const geom: PdxGeom): Integer;
  cdecl; external ODEDLL;
function dSpaceGetNumGeoms(const Space: PdxSpace): Integer; cdecl;
  external ODEDLL;
function dSpaceGetGeom(const Space: PdxSpace; const I: Integer): PdxGeom; cdecl;
  external ODEDLL;
procedure dHashSpaceSetLevels(const Space: PdxSpace;
  const minlevel, maxlevel: Integer); cdecl; external ODEDLL;
procedure dHashSpaceGetLevels(const Space: PdxSpace;
  var minlevel, maxlevel: Integer); cdecl; external ODEDLL;
procedure dSpaceSetCleanup(Space: PdxSpace; const mode: Integer); cdecl;
  external ODEDLL;
function dSpaceGetCleanup(Space: PdxSpace): Integer; cdecl; external ODEDLL;

function dCollide(o1, o2: PdxGeom; flags: Integer; var contact: TdContactGeom;
  skip: Integer): Integer; cdecl; external ODEDLL;
procedure dSpaceCollide(const Space: PdxSpace; data: pointer;
  callback: TdNearCallback); cdecl; external ODEDLL;
procedure dSpaceCollide2(o1, o2: PdxGeom; data: pointer;
  callback: TdNearCallback); cdecl; external ODEDLL;

// ----- dMass -----
procedure dMassSetParameters(var m: TdMass; themass, cgx, cgy, cgz, I11, I22,
  I33, I12, I13, I23: TdReal); cdecl; external ODEDLL;
procedure dMassAdd(var a, b: TdMass); cdecl; external ODEDLL;
procedure dMassAdjust(var m: TdMass; newmass: TdReal); cdecl; external ODEDLL;
procedure dMassTranslate(var m: TdMass; x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dMassRotate(var m: TdMass; var R: TdMatrix3); cdecl; external ODEDLL;

procedure dMassSetZero(var m: TdMass); cdecl; external ODEDLL;
procedure dMassSetBox(var m: TdMass; density, lx, ly, lz: TdReal); cdecl;
  external ODEDLL;
procedure dMassSetBoxTotal(var m: TdMass; total_mass, lx, ly, lz: TdReal);
  cdecl; external ODEDLL;
procedure dMassSetCylinder(var m: TdMass; density: TdReal; direction: Integer;
  radius, length: TdReal); cdecl; external ODEDLL;
procedure dMassSetCylinderTotal(var m: TdMass; total_mass: TdReal;
  direction: Integer; radius, length: TdReal); cdecl; external ODEDLL;
procedure dMassSetCapsule(var m: TdMass; density: TdReal; direction: Integer;
  radius, length: TdReal); cdecl; external ODEDLL;
procedure dMassSetCapsuleTotal(var m: TdMass; total_mass: TdReal;
  direction: Integer; radius, length: TdReal); cdecl; external ODEDLL;
procedure dMassSetSphere(var m: TdMass; density, radius: TdReal); cdecl;
  external ODEDLL;
procedure dMassSetSphereTotal(var m: TdMass; total_mass, radius: TdReal); cdecl;
  external ODEDLL;
procedure dMassSetTrimesh(var m: TdMass; density: TdReal; TriMesh: PdxGeom);
  cdecl; external ODEDLL;
procedure dMassSetTrimeshTotal(var m: TdMass; total_mass: TdReal;
  TriMesh: PdxGeom); cdecl; external ODEDLL;

// ----- Rotation.h -----
procedure dQFromAxisAndAngle(var q: TdQuaternion;
  const ax, ay, az, angle: TdReal); cdecl; external ODEDLL;
procedure dRFromAxisAndAngle(var R: TdMatrix3; const ax, ay, az, angle: TdReal);
  cdecl; external ODEDLL;
procedure dRSetIdentity(var R: TdMatrix3); cdecl; external ODEDLL;
procedure dQSetIdentity(var q: TdQuaternion); cdecl; external ODEDLL;
procedure dRFromEulerAngles(var R: TdMatrix3; const phi, theta, psi: TdReal);
  cdecl; external ODEDLL;
procedure dRFrom2Axes(var R: TdMatrix3; const ax, ay, az, bx, by, bz: TdReal);
  cdecl; external ODEDLL;
procedure dRFromZAxis(var R: TdMatrix3; const ax, ay, az: TdReal); cdecl;
  external ODEDLL;

procedure dMultiply0(const a: PdReal; const b, c: PdReal; p, q, R: Integer);
  cdecl; external ODEDLL;
procedure dMultiply1(const a: PdReal; const b, c: PdReal; p, q, R: Integer);
  cdecl; external ODEDLL;
procedure dMultiply2(const a: PdReal; const b, c: PdReal; p, q, R: Integer);
  cdecl; external ODEDLL;
procedure dQMultiply0(var qa: TdQuaternion; const qb, qc: TdQuaternion); cdecl;
  external ODEDLL;
procedure dQMultiply1(var qa: TdQuaternion; const qb, qc: TdQuaternion); cdecl;
  external ODEDLL;
procedure dQMultiply2(var qa: TdQuaternion; const qb, qc: TdQuaternion); cdecl;
  external ODEDLL;
procedure dQMultiply3(var qa: TdQuaternion; const qb, qc: TdQuaternion); cdecl;
  external ODEDLL;
procedure dRfromQ(var R: TdMatrix3; const q: TdQuaternion); cdecl;
  external ODEDLL;
procedure dQfromR(var q: TdQuaternion; const R: TdMatrix3); cdecl;
  external ODEDLL;
procedure dDQfromW(var dq: TdVector4; const w: TdVector3;
  const q: TdQuaternion); cdecl; external ODEDLL;

// ----- Math -----
procedure dNormalize3(var a: TdVector3); cdecl; external ODEDLL;
procedure dNormalize4(var a: TdVector4); cdecl; external ODEDLL;

// ----- Misc -----
procedure dClosestLineSegmentPoints(const a1, a2, b1, b2: TdVector3;
  var cp1, cp2: TdVector3); cdecl; external ODEDLL;

function dBoxTouchesBox(const _p1: TdVector3; const R1: TdMatrix3;
  const side1: TdVector3; const _p2: TdVector3; const R2: TdMatrix3;
  const side2: TdVector3): Integer; cdecl; external ODEDLL;

function dMaxDifference(a, b: PdReal; n, m: Integer): TdReal; cdecl;
  external ODEDLL;
procedure dMakeRandomVector(var n1: TdVector3; a: Integer; f: TdReal); cdecl;
  external ODEDLL;
function dAreConnected(a, b: PdxBody): Integer; cdecl; external ODEDLL;
function dAreConnectedExcluding(a, b: PdxBody; joint_type: TdJointTypeNumbers)
  : Integer; cdecl; external ODEDLL;

procedure dMakeRandomMatrix(a: PdRealArray; n, m: Integer; range: TdReal);
  cdecl; external ODEDLL;
procedure dClearUpperTriangle(a: PdRealArray; n: Integer); cdecl;
  external ODEDLL;

function dRandGetSeed: cardinal; cdecl; external ODEDLL;
procedure dRandSetSeed(const s: cardinal); cdecl; external ODEDLL;
function dRandInt(const n: Integer): Integer; cdecl; external ODEDLL;
function dRandReal: TdReal; cdecl; external ODEDLL;

// return 1 if the random number generator is working.
function dTestRand: Integer; cdecl; external ODEDLL;

procedure dTestMatrixComparison; cdecl; external ODEDLL;
procedure dTestSolveLCP; cdecl; external ODEDLL;

// ----- Recreated -----
function dDot(const a, b: TdVector3): TdReal; overload;
function dDot(const a, b: PdVector3): TdReal; overload;

function dDOT14(const a, b: TdRealArray): TdReal; overload;
function dDOT14(const a, b: PdRealArray): TdReal; overload;

procedure dMULTIPLY0_333(var a: TdMatrix3; const b, c: TdMatrix3);
procedure dMULTIPLY0_331(var a: TdVector3; const b: TdMatrix3;
  const c: TdVector3);

function Vector3ScalarMul(const a: TdVector3; const Scalar: TdReal): TdVector3;
function Vector3ADD(const a, b: TdVector3): TdVector3;
function Vector3SUB(const a, b: TdVector3): TdVector3;
function Vector3Length(const a: TdVector3): TdReal;
function Vector3Cross(const v1, v2: TdVector3): TdVector3;
function Vector3Make(const x, y, z: TdReal): TdVector3;

procedure VerifyDelphiODE(body: PdxBody; geom: PdxGeom);

{ ExportInitODEMarker }

const
  MaxUserClasses = 4;

var
  dSphereClass: Integer = 0;
  dBoxClass: Integer = 1;
  dCapsuleClass: Integer = 2;
  dCylinderClass: Integer = 3;
  dPlaneClass: Integer = 4;
  dRayClass: Integer = 5;
  dConvexClass: Integer = 6;
  dGeomTransformClass: Integer = 7;
  dTriMeshClass: Integer = 8;
  dHeightFieldClass: Integer = 9;
  dFirstSpaceClass: Integer = 10;
  dSimpleSpaceClass: Integer = 10;
  dHashSpaceClass: Integer = 11;
  dSweepAndPruneSpaceClass: Integer = 12;
  dQuadTreeSpaceClass: Integer = 13;
  dLastSpaceClass: Integer = 13;
  dFirstUserClass: Integer = 14;
  dLastUserClass: Integer = 17;
  dGeomNumClasses: Integer = 18;

  IsODEInitialized: boolean = false;
  DisabledDebugGeom: boolean = false;
  DisabledDebugCollision: boolean = false;

{$IFDEF cODEDebugEnabled}

var
  ODEDebugGeomList: TGeomList;
{$ENDIF}
{$IFDEF cODEDebugCollisionEnabled}

var
  ODEDebugCollisionList: array of TdContact;
{$ENDIF}
  // These are made public in the dynamic version MRQZZZ
function InitODE(ADllName: PChar): boolean;
procedure CloseODE;

// -----------------------------------------
implementation

// -----------------------------------------

// ---------------------
// TBodyList
// ---------------------

procedure TBodyList.DeleteAllBodies;
var
  I: Integer;
begin
  for I := 0 to count - 1 do
    dBodyDestroy(Get(I));
  Clear;
end;

function TBodyList.GetItems(I: Integer): PdxBody;
begin
  result := Get(I);
end;
